# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: Python CI.yml  check.yml
gendiff/: __init__.py  cli.py  data_handler.py  diff_builder.py  gendiff.py  parse_args.py  parse_data.py  parser.py
gendiff/formaters/: json_view.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: __init__.py  test_gendiff.py
tests/fixtures/: file1.yaml  file2.yaml  flat_expected.txt  flat_json.json  json_view.json  nested_file1.yaml  nested_file2.yaml
